[package]
name = "midas"
version = "0.5.14"
authors = ["Edward Fitz Abucay gh:@ffimnsr"]
edition = "2021"
readme = "README.md"
description = "Do painless migration 🦀"
categories = ["command-line-utilities", "development-tools"]
homepage = "https://github.com/ffimnsr/midas"
repository = "https://github.com/ffimnsr/midas"
license = "MIT OR Apache-2.0"
keywords = ["migrations", "database", "postgres", "migrate", "cli"]
exclude = [".gitignore"]

[[bin]]
name = "cargo-migrate"
path = "src/main.rs"

[[bin]]
name = "midas"
path = "src/midas.rs"

[dependencies]
clap = "2.33"
postgres = "0.19"
regex = "1.5"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["tracing-log"] }
tracing-attributes = "0.1"
tracing-futures = "0.2"
log = "0.4"
url = "2.2"

[dev-dependencies]
tempfile = "3.2"
