[package]
name = "midas"
version = "0.6.7"
authors = ["Edward Fitz Abucay gh:@ffimnsr"]
edition = "2021"
readme = "README.md"
description = "Do painless migration 🦀"
categories = ["command-line-utilities", "development-tools"]
homepage = "https://github.com/ffimnsr/midas"
repository = "https://github.com/ffimnsr/midas"
license = "MIT OR Apache-2.0"
keywords = ["sql", "database", "command-line", "migrate", "cli"]
exclude = [".gitignore"]

[[bin]]
name = "cargo-migrate"
path = "src/main.rs"

[[bin]]
name = "midas"
path = "src/midas.rs"

[dependencies]
clap = { version = "4.5", features = ["string"] }
postgres = "0.19"
mysql = "25.0"
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1.10"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["tracing-log"] }
tracing-attributes = "0.1"
tracing-futures = "0.2"
log = "0.4"
url = "2.5"
indoc = "2"
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tempfile = "3.12"

[package.metadata.deb]
name = "midas"
maintainer = "Edward Fitz Abucay gh:@ffimnsr"
section = "utility"
assets = [
  ["target/release/midas", "usr/bin/", "755"],
  ["target/release/cargo-migrate", "usr/bin/", "755"],
  ["COPYRIGHT", "usr/share/doc/midas/", "644"],
  ["LICENSE-MIT", "usr/share/doc/midas/", "644"],
  ["LICENSE-APACHE", "usr/share/doc/midas/", "644"],
  ["README.md", "usr/share/doc/midas/README", "644"],
]
